--- a/package.json
+++ b/package.json
@@ -8,21 +8,13 @@
         "sync"
     ],
     "author": "Fabien Thebaud",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/fthebaud/sync-folders.git"
-    },
-    "bugs": {
-        "url": "https://github.com/fthebaud/sync-folders/issues"
-    },
-    "homepage": "https://github.com/fthebaud/sync-folders#readme",
     "license": "MIT",
     "devDependencies": {
-        "grunt": "^1.0.1",
-        "grunt-contrib-watch": "^1.0.0",
-        "grunt-sync": "^0.5.2"
+        "grunt": "1.0.1",
+        "grunt-contrib-watch": "1.0.0",
+        "grunt-sync": "0.5.2"
     },
     "scripts": {
-        "keepInSync": "grunt"
+        "start": "grunt"
     }
 }
